--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <!-- google fonts czcionka poppins -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap" rel="stylesheet">
   <title>Bartkiewicz Portfolio</title>
 </head>
 
